# RustGPT

auto_gpt/: Cargo.toml
auto_gpt/schemas/: api_schema.json
auto_gpt/src/: main.rs
auto_gpt/src/apis/: call_request.rs
auto_gpt/src/helpers/: command_line.rs  general.rs
auto_gpt/src/models/agent_basic/: basic_agent.rs
auto_gpt/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
auto_gpt/src/models/agents_manager/: managing_agent.rs
auto_gpt/src/models/general/: llm.rs
auto_gpt/web_template/: Cargo.toml  database.json
auto_gpt/web_template/src/: code_template.rs  main.rs
